versioned_docs/version-3.13/releases/release-notes.mdx
---
tags:
  - Community
  - Enterprise
displayed_sidebar: docsEnglish
---

# ScalarDL 3.13 Release Notes

This page includes a list of release notes for ScalarDL 3.13.

## v3.13.1

**Release date:** September 8, 2026

### Summary

This release includes several improvements, bug fixes, and vulnerability fixes. For detailed changes, see the following.

:::warning Backward-incompatible changes

**The nonce of a contract execution request must now be a canonical UUID.** A request whose nonce is not a canonical UUID (36 characters in the `8-4-4-4-12` hyphenated form; uppercase and lowercase hex are both accepted) is now rejected. The client SDKs have always generated UUID nonces, so this affects only applications that pass their own nonce through the deprecated `executeContract` methods that take a nonce argument. If your application does this, either stop passing a nonce and let the SDK generate one, or make sure the value you pass is a canonical UUID. ([#662](https://github.com/scalar-labs/scalardl/pull/662))

:::

### Community and Enterprise editions

#### Improvements

- Added validation that the nonce of a contract execution request is a canonical UUID. Rejecting a malformed nonce at the server entry point prevents it from corrupting downstream bookkeeping. ([#662](https://github.com/scalar-labs/scalardl/pull/662))
- Upgraded ScalarDB to 3.17.5, which replaces MySQL Connector/J with MariaDB Connector/J. ([#526](https://github.com/scalar-labs/scalardl/pull/526))

#### Bug fixes

- Fixed an issue where contracts could not access a JDBC database (e.g., PostgreSQL). ([#558](https://github.com/scalar-labs/scalardl/pull/558))
- Fixed the Ledger to reject unsupported ScalarDB transaction managers at startup instead of silently accepting them. ([#585](https://github.com/scalar-labs/scalardl/pull/585))
- Restricted function execution so that a function registered in a non-default namespace can only access the ScalarDB namespace with the same name as its context namespace, or a namespace whose name starts with the context namespace followed by an underscore. ([#570](https://github.com/scalar-labs/scalardl/pull/570))
- Fixed contract execution failing with an `AccessControlException` when ScalarDL runs on a ScalarDB multi-storage configuration backed by JDBC (or DynamoDB / Cloud Storage), by granting the required sandbox permissions regardless of the configured storage type. ([#588](https://github.com/scalar-labs/scalardl/pull/588))
- Fixed an issue where contract execution failed when database connections needed to be re-established (for example, after a database restart or an idle timeout) with the SecurityManager enabled. ([#621](https://github.com/scalar-labs/scalardl/pull/621))
- Removed the top-level `create-namespace` command. Use `scalardl create-namespace` instead, which is consistent with the other namespace commands (`scalardl drop-namespace`, `scalardl list-namespaces`). ([#622](https://github.com/scalar-labs/scalardl/pull/622))
- Fixed a race condition where pausing a Ledger (or Auditor/Gateway) server could report success while the server remained unpaused. ([#637](https://github.com/scalar-labs/scalardl/pull/637))
- Fixed several vulnerabilities in grpc-health-probe. ([#589](https://github.com/scalar-labs/scalardl/pull/589))
- Fixed [CVE-2026-54512](https://github.com/advisories/GHSA-j3rv-43j4-c7qm "CVE-2026-54512") and [CVE-2026-54513](https://github.com/advisories/GHSA-rmj7-2vxq-3g9f "CVE-2026-54513"). ([#590](https://github.com/scalar-labs/scalardl/pull/590))
- Fixed [CVE-2026-33818](https://github.com/advisories/GHSA-xc2p-8ggw-6cr5 "CVE-2026-33818"), [CVE-2026-39821](https://github.com/advisories/GHSA-w2q5-6q6x-x959 "CVE-2026-39821"), [CVE-2026-46600](https://github.com/advisories/GHSA-gg3m-vvp2-p2c5 "CVE-2026-46600"), [CVE-2026-56852](https://github.com/advisories/GHSA-jpjm-c3r5-q96r "CVE-2026-56852"), [CVE-2026-56853](https://github.com/advisories/GHSA-xphw-4f88-5f39 "CVE-2026-56853"), [CVE-2026-56858](https://github.com/advisories/GHSA-c974-w86c-vpfw "CVE-2026-56858"), [CVE-2026-56859](https://github.com/advisories/GHSA-76p8-fhrm-vpc7 "CVE-2026-56859"), [CVE-2026-56860](https://github.com/advisories/GHSA-25mv-j2qr-v5jq "CVE-2026-56860"), [CVE-2026-56862](https://github.com/advisories/GHSA-7qch-w8m5-g3h3 "CVE-2026-56862"), [CVE-2026-84304](https://github.com/advisories/GHSA-vp52-pcj8-j9qc "CVE-2026-84304"), [GHSA-hrxh-6v49-42gf](https://github.com/advisories/GHSA-hrxh-6v49-42gf "GHSA-hrxh-6v49-42gf"), and [GHSA-vp52-pcj8-j9qc](https://github.com/advisories/GHSA-vp52-pcj8-j9qc "GHSA-vp52-pcj8-j9qc"). ([#681](https://github.com/scalar-labs/scalardl/pull/681))

### Enterprise edition

#### Bug fixes

- Fixed lock-related error codes and their solutions.
- Fixed read lock count corruption caused by concurrent recovery and eliminated unnecessary CAS failures when recovering multiple read lock nonces.
- Fixed an issue in the Auditor where a Ledger call failure during asset lock recovery was reported to clients as a generic runtime error, or its cause was lost by being treated as an unknown transaction state.
- Fixed an issue where the Auditor on JDBC databases (Oracle) could fail to execute contracts with a `DL-COMMON-305001` error caused by reading an asset lock entry whose value was stored as `NULL`.
- Fixed an issue where contract execution on Auditor failed when database connections needed to be re-established (for example, after a database restart or an idle timeout) with the SecurityManager enabled.
- Fixed an issue where releasing a read or write lock could fail with a misleading `INCONSISTENT_STATES` error, or release another transaction's write lock, when a concurrent recovery had already released the lock.
- Fixed an issue where retrying a read lock release could fail with a `StackOverflowError` and retry without any wait when the underlying storage kept failing conditional writes.
- Fixed an issue where releasing a read lock could leave the lock owner list and the lock count inconsistent.

## v3.13.0

**Release date:** March 25, 2026

### Summary

This release introduces several enhancements related to the namespace feature and includes several improvements and bug fixes. For detailed changes, see the following.

### Community and Enterprise editions

#### Enhancements

- Added support for namespace management functionalities. ([#322](https://github.com/scalar-labs/scalardl/pull/322), [#345](https://github.com/scalar-labs/scalardl/pull/345), [#387](https://github.com/scalar-labs/scalardl/pull/387), [#392](https://github.com/scalar-labs/scalardl/pull/392))
- Added support for namespace-aware contract execution. ([#357](https://github.com/scalar-labs/scalardl/pull/357))
- Added support for isolated namespaces. ([#430](https://github.com/scalar-labs/scalardl/pull/430))

#### Improvements

- Upgraded server-side Java versions to Java 21. ([#395](https://github.com/scalar-labs/scalardl/pull/395))

#### Bug fixes

- Fixed the JSON Schema Validator repository and version. ([#277](https://github.com/scalar-labs/scalardl/pull/277))
- Fixed bugs to handle FLOAT and BLOB data types in the PutToMutable function. ([#297](https://github.com/scalar-labs/scalardl/pull/297))
- Fixed NullPointerException when a client is misconfigured with a digital signature. ([#302](https://github.com/scalar-labs/scalardl/pull/302))
- Fixed status code handling. ([#323](https://github.com/scalar-labs/scalardl/pull/323))
- Fixed the parameter name for the client entity ID. ([#376](https://github.com/scalar-labs/scalardl/pull/376))
- Fixed a bug where users cannot register a custom ValidateLedger contract after bootstrapping. ([#404](https://github.com/scalar-labs/scalardl/pull/404))
- Fixed [CVE-2025-47907](https://github.com/advisories/GHSA-j5pm-7495-qmr3 "CVE-2025-47907") and [CVE-2025-58183](https://github.com/advisories/GHSA-9gcr-gp5f-jw27 "CVE-2025-58183"). ([#364](https://github.com/scalar-labs/scalardl/pull/364))
- Fixed [CVE-2025-61726](https://github.com/advisories/GHSA-gm9r-q53w-2gh4 "CVE-2025-61726"), [CVE-2025-61728](https://github.com/advisories/GHSA-g9q4-qjx4-2v7q "CVE-2025-61728"), [CVE-2025-61729](https://github.com/advisories/GHSA-7c64-f9jr-v9h2 "CVE-2025-61729") and [CVE-2025-68121](https://github.com/advisories/GHSA-h355-32pf-p2xm "CVE-2025-68121"). ([#472](https://github.com/scalar-labs/scalardl/pull/472))

### Enterprise edition

#### Bug fixes

- Fixed duplicated read lock.
- Fixed Gateway exception handling.
- Fixed an SLF4J version conflict in BYOL Docker images.
